created a separate less file for pedalboard library

--- a/html/index.html
+++ b/html/index.html
@@ -595,9 +595,8 @@ $('document').ready(function() {
                 <!-- <span class="close btn btn-danger js-close">Close</span> -->
             </header>
             <div class="form-horizontal filter clearfix">
-                <div class="control-group">
-                    <label>Keywords</label><br/>
-                    <input type="search"/>
+                <div class="form-group">
+                    <input id="searchPedalboard" class="form-control" length="20" placeholder="Filter by keyword(s)" type="search"/>
                 </div>
 		<!-- TODO make this work (branch pedalboard_filter) -->
 		<!--
