Don't initialize bluetooth/upgrade stuff, not used for now

--- a/html/index.html
+++ b/html/index.html
@@ -190,9 +190,9 @@ $('document').ready(function() {
 <script type="text/javascript" src="js/social.js?v={{version}}"></script>
 <script type="text/javascript" src="js/hardware.js?v={{version}}"></script>
 <script type="text/javascript" src="js/share.js?v={{version}}"></script>
-<script type="text/javascript" src="js/bluetooth.js?v={{version}}"></script>
-<script type="text/javascript" src="js/upgrade.js?v={{version}}"></script>
-<script type="text/javascript" src="js/xrun.js?v={{version}}"></script>
+<!--<script type="text/javascript" src="js/bluetooth.js?v={{version}}"></script>-->
+<!--<script type="text/javascript" src="js/upgrade.js?v={{version}}"></script>-->
+<!--<script type="text/javascript" src="js/xrun.js?v={{version}}"></script>-->
 <script type="text/javascript" src="js/host.js?v={{version}}"></script>
 <script type="text/javascript" src="js/presets.js?v={{version}}"></script>
 <script type="text/javascript" src="js/nprogress.js?v={{version}}"></script>
