--- a/html/resources/settings.html
+++ b/html/resources/settings.html
@@ -3,8 +3,19 @@
         <h1 class="alignleft">{{effect.name}}</h1>
         <button class="js-close alignright btn btn-danger">Close</button>
     </header>
-    <div class="preset-manager">
+    <!-- OLD STYLE -->
+    <div class="mod-presets clearfix">
+        <select  mod-role="presets">
+            <option value="">---</option>
+            {{#effect.presets}}
+            <option mod-role="preset-label" value="{{uri}}">{{label}}</option>
+            {{/effect.presets}}
+        </select>
     </div>
+    <!-- /OLD STYLE -->
+    <!-- NEW STYLE -->
+    <!--<div class="preset-manager"></div>-->
+    <!-- /NEW STYLE -->
     <div class="mod-controls clearfix">
         <div class="mod-control-group clearfix">
             <div class="mod-switch bypass">
