increased size of pedal icons. started implementing fontello instead of using image icons

--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>MOD</title>
+    <link rel="stylesheet" type="text/css" href="css/fontello/css/fontello.css?v={{version}}"/>
     <link rel="stylesheet" type="text/css" href="css/social.css?v={{version}}"/>
     <link rel="stylesheet" type="text/css" href="css/main.css?v={{version}}"/>
     <link rel="stylesheet" type="text/css" href="css/dashboard.css?v={{version}}"/>
