changes in constructor bottom menu

--- a/html/index.html
+++ b/html/index.html
@@ -438,13 +438,13 @@ $('document').ready(function() {
     <div id="main-menu">
         <div id="mod-social" class="icon"></div>
         <div id="mod-plugins" class="icon selected"></div>
-        <div id="mod-cloud-plugins" class="icon"></div>
         <div id="mod-pedalboard" class="icon"></div>
         <div id="mod-bank" class="icon"></div>
+        <div id="mod-cloud-plugins" class="icon"></div>
         <div id="banks-saving">Auto saving banks...</div>
         <div id="mod-disconnect" class="icon">Disconnect</div>
-        <div id="mod-settings" class="icon"></div>
-        <div id="mod-bluetooth" class="icon"></div>
+        <div id="mod-settings" class="icon hide"></div>
+        <div id="mod-bluetooth" class="icon hide"></div>
         <div id="mod-cloud" class="icon"></div>
         <div id="mod-ram" class="icon">
           <div class="progress" id="ram-bar" style="width: 100%;">
