'btn-success' purple; get rid of useless css stuff from bootstrap-bloat since this was already copied to main.css

--- a/html/index.html
+++ b/html/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>MOD</title>
     <link rel="stylesheet" type="text/css" href="css/fontello/css/fontello.css?v={{version}}"/>
-    <link rel="stylesheet" type="text/css" href="css/social.css?v={{version}}"/>
+    <!--<link rel="stylesheet" type="text/css" href="css/social.css?v={{version}}"/>-->
     <link rel="stylesheet" type="text/css" href="css/main.css?v={{version}}"/>
     <link rel="stylesheet" type="text/css" href="css/dashboard.css?v={{version}}"/>
-    <link rel="stylesheet" type="text/css" href="css/social.css?v={{version}}"/>
+    <!--<link rel="stylesheet" type="text/css" href="css/social.css?v={{version}}"/>-->
     <link rel="stylesheet" type="text/css" href="css/fonts.css?v={{version}}"/>
     <link rel="stylesheet" type="text/css" href="img/icons/icons.css?v={{version}}"/>
     <!-- PEDALS -->
@@ -490,7 +490,6 @@ $('document').ready(function() {
         <!-- EFFECTS LIBRARY SETTINGS WINDOW -->
         <div id="plugins-library-settings-window">
             <form class="box form-inline">
-                <h1>Plugin Search</h1>
                 <div class="form-group">
                     <input id="effectSearch" class="form-control" placeholder="Keyword(s)" type="search"/>
                 </div>
