Unify section headers and main menu

--- a/html/index.html
+++ b/html/index.html
@@ -389,7 +389,7 @@ $('document').ready(function() {
 
             <!-- PEDALBOARD-SETTINGS -->
             <div id="pedalboard-info">
-                <div class="title">{{fulltitle}}</div>
+                <h1 class="top bottom">{{fulltitle}}</h1>
                 <!-- <div class="favorite"></div> -->
                 <div class="actions">
                     <button class="js-add-midi btn btn-xs btn-warning">Add MIDI Device</button>
@@ -532,7 +532,7 @@ $('document').ready(function() {
     <!-- Cloud Plugins LIBRARY -->
     <div id="cloud-plugins-library" class="mod-hidden">
         <div>
-            <header class="hide">
+            <header>
                 <h1 class="bottom top">
                     PLUGIN STORE
                     <!-- <span class="help"></span> -->
@@ -540,7 +540,6 @@ $('document').ready(function() {
                 <!-- <span class="close btn btn-danger js-close">Close</span> -->
             </header>
             <div class="filter clearfix">
-                <h1>PLUGIN STORE</h1>
                 <h2>Browse</h2>
                 <div class="control-group">
                     <input type="radio" name="installed" value="all" id="cloud-plugins-all" checked />
