Fix add-midi button

--- a/html/index.html
+++ b/html/index.html
@@ -94,7 +94,7 @@ $('document').ready(function() {
       zoomIn: $('.zoom-in'),
       zoomOut: $('.zoom-out'),
       rec: $('#rec'),
-      addMidiButton: $('#pedalboard-info .js-add-midi'),
+      addMidiButton: $('#pedalboard-info .mod-add-midi'),
       midiDevicesWindow: $('#midi-device-window'),
       midiDevicesList: $("#midi-device-list"),
       saveBox: $('#save-pedalboard'),
