Pedalboards lib: get rid of left block; move search field to top menu

--- a/html/index.html
+++ b/html/index.html
@@ -595,12 +595,13 @@ $('document').ready(function() {
                     Pedalboards Library
                     <!-- <span class="help"></span> -->
                 </h1>
-                <!-- <span class="close btn btn-danger js-close">Close</span> -->
-            </header>
-            <div class="form-horizontal filter clearfix">
                 <div class="form-group">
                     <input id="searchPedalboard" class="form-control" length="20" placeholder="Filter by keyword(s)" type="search"/>
                 </div>
+                <!-- <span class="close btn btn-danger js-close">Close</span> -->
+            </header>
+            <!--<div class="form-horizontal filter clearfix">
+                
 		<!-- TODO make this work (branch pedalboard_filter) -->
 		<!--
                 <div class="control-group">
@@ -651,8 +652,8 @@ $('document').ready(function() {
                         <option>4</option>
                     </select>
                 </div>
-		-->
             </div>
+		-->
             <div class="pedalboards clearfix js-pedalboards"></div>
         </div>
     </div>
