--- a/html/index.html
+++ b/html/index.html
@@ -89,7 +89,7 @@
 
 $('document').ready(function() {
   desktop = new Desktop({
-      titleBox: $('#pedalboard-info .title'),
+      titleBox: $('#pedalboard-info h1'),
       pedalboard: $('#pedalboard-dashboard'),
       zoomIn: $('.zoom-in'),
       zoomOut: $('.zoom-out'),
@@ -389,7 +389,7 @@ $('document').ready(function() {
 
             <!-- PEDALBOARD-SETTINGS -->
             <div id="pedalboard-info">
-                <h1 class="top bottom">{{fulltitle}}</h1>
+                <h1 class="top bottom {{titleblend}}">{{fulltitle}}</h1>
                 <!-- <div class="favorite"></div> -->
                 <div class="actions">
                     <button class="js-reset">New Pedalboard</button><button
