--- a/html/index.html
+++ b/html/index.html
@@ -200,14 +200,48 @@ $('document').ready(function() {
 <script type="text/javascript" src="js/presets.js?v={{version}}"></script>
 <script type="text/javascript" src="js/nprogress.js?v={{version}}"></script>
 
+<style type="text/css">
+    /* STYLE FOR LOADING ANIMATION */
+    .loadinganim { width:100px; height:100px; position:absolute; top:50%; left:50%; transform: translate(-50%, -50%); z-index:-1; }
+    .loadinganim path { stroke:#883996; stroke-width:4; stroke-linecap:butt; }
+    .loadingcircle { animation: loadingcircle 0.5s linear infinite; }
+    @keyframes loadingcircle { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); }}
+</style>
 </head>
 <body class="mod-dark">
+  <svg xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" id="loading" class="loadinganim" version="1.1">
+   <g transform="translate(50, 50)"><g class="loadingcircle"><g transform="translate(-50,-50)">
+    <path style="opacity:1;" d="M 49.999999,1.99999 A 46,46 0 0 0 37.576684,3.63555" />
+    <path d="M 37.576684,3.63555 A 46,46 0 0 0 25.999998,8.43077" style="opacity:0.95;" />
+    <path style="opacity:0.9;" d="m 25.999998,8.43077 a 46,46 0 0 0 -9.941122,7.62809" />
+    <path d="M 16.058876,16.05886 A 46,46 0 0 0 8.430781,25.99999" style="opacity:0.85;" />
+    <path style="opacity:0.8;" d="M 8.430781,25.99999 A 46,46 0 0 0 3.635561,37.57667" />
+    <path d="M 3.635561,37.57667 A 46,46 0 0 0 2,50" style="opacity:0.75;" />
+    <path style="opacity:0.7;" d="M 2,50 A 46,46 0 0 0 3.63556,62.4233" />
+    <path d="M 3.63556,62.4233 A 46,46 0 0 0 8.430781,74" style="opacity:0.65;" />
+    <path style="opacity:0.6;" d="m 8.430781,74 a 46,46 0 0 0 7.628093,9.9411" />
+    <path d="m 16.058874,83.9411 a 46,46 0 0 0 9.941128,7.6281" style="opacity:0.55;" />
+    <path style="opacity:0.5;" d="m 26.000002,91.5692 a 46,46 0 0 0 11.576682,4.7952" />
+    <path d="M 37.576684,96.3644 A 46,46 0 0 0 50,98" style="opacity:0.45;" />
+    <path style="opacity:0.4;" d="M 49.999999,98 A 46,46 0 0 0 62.423313,96.3644" />
+    <path d="M 62.423313,96.3644 A 46,46 0 0 0 74,91.5692" style="opacity:0.35;" />
+    <path style="opacity:0.3;" d="m 74,91.5692 a 46,46 0 0 0 9.941126,-7.6281" />
+    <path d="M 83.941126,83.9411 A 46,46 0 0 0 91.56922,74" style="opacity:0.25;" />
+    <path style="opacity:0.2;" d="M 91.56922,74 A 46,46 0 0 0 96.36444,62.4233" />
+    <path d="M 96.36444,62.4233 A 46,46 0 0 0 98,50" style="opacity:0.15;" />
+    <path style="opacity:0.1;" d="M 98,50 A 46,46 0 0 0 96.36444,37.57667" />
+    <path d="M 96.36444,37.57667 A 46,46 0 0 0 91.56922,25.99999" style="opacity:0.05;" />
+    <path style="opacity:0.02;" d="M 91.56922,25.99999 A 46,46 0 0 0 83.941126,16.05887" />
+  </g></g></g>
+  <path d="m 62.633535,68.542327 c 0,1.710496 -1.158195,2.565444 -3.473354,2.565444 l -18.357511,0 c -2.316079,0 -3.473963,-0.854948 -3.473963,-2.565444 l 0,-14.449074 c 0,-1.710794 1.157884,-2.566342 3.473963,-2.566342 l 18.357511,0 c 2.315159,0 3.473354,0.855548 3.473354,2.566342 l 0,14.449074 z M 40.80267,47.421483 c -1.579268,0 -2.921041,0.164408 -4.026564,0.493548 -1.105488,0.328817 -2.006985,0.790084 -2.703814,1.381966 -0.698239,0.592804 -1.204412,1.296722 -1.520206,2.111777 -0.31597,0.815975 -0.473569,1.724806 -0.473569,2.724061 l 0,14.369611 c 0,0.973684 0.157599,1.875514 0.473569,2.70488 0.315794,0.828456 0.821967,1.539075 1.520206,2.131569 0.696829,0.591882 1.598326,1.053148 2.703814,1.381976 1.105523,0.328519 2.447296,0.492927 4.026564,0.492927 l 18.357511,0 c 1.578958,0 2.921053,-0.164408 4.026574,-0.492927 1.104602,-0.328828 2.006731,-0.790094 2.704272,-1.381976 0.696918,-0.592494 1.203557,-1.303113 1.519893,-2.131569 0.316038,-0.829366 0.473446,-1.731196 0.473446,-2.70488 l 0,-14.369611 c 0,-0.999255 -0.157408,-1.908086 -0.473446,-2.724061 -0.316336,-0.815055 -0.822975,-1.518973 -1.519893,-2.111777 -0.697541,-0.591882 -1.59967,-1.053149 -2.704272,-1.381966 -1.105521,-0.32914 -2.447616,-0.493548 -4.026574,-0.493548 l -18.357511,0 z m 7.510278,-23.988304 0,6.519841 c 1.416989,0.01 2.573652,1.171586 2.573652,2.590095 l 0,5.270923 c 0,1.42552 -1.166103,2.591315 -2.590393,2.591315 l -3.387187,0 c -1.42369,0 -2.590106,-1.165795 -2.590106,-2.591315 l 0,-5.270923 c 0,-1.418509 1.156365,-2.580354 2.572744,-2.590095 l 0,-6.519841 -2.091077,0 c -1.234608,0 -2.285016,0.128177 -3.149705,0.386061 -0.864687,0.256354 -1.569827,0.617144 -2.115127,1.08055 -0.54591,0.462785 -0.942323,1.019047 -1.189546,1.667563 -0.246924,0.648815 -0.370153,1.353654 -0.370153,2.115427 l 0,11.241826 c 0,0.781873 0.123229,1.492493 0.370153,2.130958 0.247223,0.638465 0.643636,1.188026 1.189546,1.651421 0.5453,0.463706 1.25044,0.824197 2.115127,1.08116 0.864689,0.257885 1.915097,0.386372 3.149705,0.386372 l 14.36108,0 c 1.235218,0 2.285626,-0.128487 3.150315,-0.386372 0.864688,-0.256963 1.569528,-0.617454 2.114827,-1.08116 0.5456,-0.463395 0.942322,-1.012956 1.189546,-1.651421 0.246924,-0.638465 0.37023,-1.349085 0.37023,-2.130958 l 0,-11.241826 c 0,-0.761773 -0.123306,-1.466612 -0.37023,-2.115427 -0.247224,-0.648516 -0.643946,-1.204778 -1.189546,-1.667563 -0.545299,-0.463406 -1.250139,-0.824196 -2.114827,-1.08055 -0.864689,-0.257884 -1.915097,-0.386061 -3.150315,-0.386061 l -8.848713,0 z m 11.656808,10.366465 c 0.747474,0 1.354577,0.607415 1.354577,1.354576 0,0.747772 -0.607103,1.354265 -1.354577,1.354265 -0.74837,0 -1.354265,-0.606493 -1.354265,-1.354265 0,-0.747161 0.605895,-1.354576 1.354265,-1.354576 M 50.000002,9.3491652 c 22.447098,0 40.650851,18.2040528 40.650851,40.6505408 0,22.447709 -18.203753,40.651128 -40.650851,40.651128 -22.447469,0 -40.6508553,-18.203419 -40.6508553,-40.651128 0,-22.446488 18.2033863,-40.6505408 40.6508553,-40.6505408 m 0,6.0619268 c 19.099182,0 34.588924,15.489421 34.588924,34.588614 0,19.100403 -15.489742,34.589834 -34.588924,34.589834 -19.100346,0 -34.589384,-15.489431 -34.589384,-34.589834 0,-19.099193 15.489038,-34.588614 34.589384,-34.588614 m -4.520111,38.579866 2.285938,0 c 0.961502,0 1.747636,0.786444 1.747636,1.747948 l 0,11.464987 c 0,0.960294 -0.786743,1.747637 -1.747636,1.747637 l -2.285938,0 c -0.961814,0 -1.747948,-0.786133 -1.747948,-1.747637 l 0,-11.464987 c 0,-0.961504 0.785524,-1.747948 1.747948,-1.747948"
+     style="fill:#212121;fill-opacity:1;fill-rule:evenodd;stroke:none"
+     class="loadinglogo" />
+</svg>
   <!-- NOTIFICATIONS -->
-
-  <div id="notifications" class="mod-hidden"></div>
+  <div id="notifications" class="mod-hidden mod-init-hidden"></div>
   <!-- END NOTIFICATIONS -->
     <!-- WRAPPER -->
-    <div id="wrapper">
+    <div id="wrapper" class="mod-init-hidden">
 
         <!-- PEDALBOARD-SETTINGS-WINDOW -->
         <div id="pedalboard-settings" class="mod-hidden">
@@ -434,7 +468,7 @@ $('document').ready(function() {
 
 
     <!-- MAIN MENU-->
-    <div id="main-menu">
+    <div id="main-menu" class="mod-init-hidden">
         <div id="mod-social" class="icon"></div>
         <div id="mod-plugins" class="icon selected"></div>
         <div id="mod-pedalboard" class="icon"></div>
@@ -471,7 +505,7 @@ $('document').ready(function() {
 
 
     <!-- plugins-library -->
-    <div id="plugins-library" class="js-main-library">
+    <div id="plugins-library" class="js-main-library mod-init-hidden">
         <!-- EFFECTS MENU ITEMS -->
         <ul class="clearfix js-category-tabs">
             <li id="effect-tab-All">All</li>
@@ -527,7 +561,7 @@ $('document').ready(function() {
     <!-- END plugins-library -->
 
     <!-- Cloud Plugins LIBRARY -->
-    <div id="cloud-plugins-library" class="mod-hidden">
+    <div id="cloud-plugins-library" class="mod-hidden mod-init-hidden">
         <div>
             <header>
                 <h1 class="bottom top">
@@ -588,7 +622,7 @@ $('document').ready(function() {
     <!-- END Cloud Plugins Library -->
 
     <!-- PEDALBOARDS LIBRARY -->
-    <div id="pedalboards-library" class="mod-hidden">
+    <div id="pedalboards-library" class="mod-hidden mod-init-hidden">
         <div class="box clearfix">
             <header>
                 <h1 class="bottom top">
@@ -659,7 +693,7 @@ $('document').ready(function() {
     </div>
 
     <!-- BANK LIBRARY -->
-    <div id="bank-library" class="mod-hidden">
+    <div id="bank-library" class="mod-hidden mod-init-hidden">
         <!-- END BOX -->
         <div class="box">
          <header>
@@ -803,7 +837,7 @@ $('document').ready(function() {
 
 
 <!-- MOD SOCIAL NETWORK -->
-<div id="mod-social-network" class="clearfix mod-hidden">
+<div id="mod-social-network" class="clearfix mod-hidden mod-init-hidden">
     <div> <!-- wrapper -->
         <header class="navbar navbar-default">
           <div class="container">
