More Styling: * remove nearly all rounded borders * re-style pedalboard-icons * unify pedalboard-icon looks in banks * style banks section * make overall behavior feel more snappy (transitions) * remove a couple of borders (e.g. buttons and icons in menus)

--- a/html/index.html
+++ b/html/index.html
@@ -706,7 +706,7 @@ $('document').ready(function() {
 
         <!-- BANK-LIST -->
         <div id="bank-list">
-            <div class="add-bank" id="js-add-bank"><span class="icon-add"><i></i><b></b></span> Add Bank <small>(click on a bank twice to rename it)</small></div>
+            <div class="add-bank" id="js-add-bank"><span class="icon-add"><i></i><b></b></span>Add Bank</div>
             <span class="js-canvas"></span>
         </div>
         <!-- END BANK-LIST -->
