Fix high CPU bug

--- a/html/index.html
+++ b/html/index.html
@@ -202,6 +202,7 @@ $('document').ready(function() {
 
 <style type="text/css">
     /* STYLE FOR LOADING ANIMATION */
+    body.initialized #loading { display: none; }
     .loadinganim { width:100px; height:100px; position:absolute; top:50%; left:50%; transform: translate(-50%, -50%); z-index:-1; }
     .loadinganim path { stroke:#883996; stroke-width:4; stroke-linecap:butt; }
     .loadingcircle { animation: loadingcircle 0.5s linear infinite; }
