Re-enabling disconnect button

--- a/html/index.html
+++ b/html/index.html
@@ -493,7 +493,7 @@ $('document').ready(function() {
             cpu
           </p>
         </div>
-        <!-- TODO: cleanup <div id="mod-disconnect" class="icon">Disconnect</div>-->
+        <div id="mod-disconnect" class="icon">Disconnect</div>
         <div id="bypassR" class="icon mod-bypass-r">Bypass R</div>
         <div id="bypassL" class="icon mod-bypass-l">Bypass L</div>
         <div class="icon mod-add-midi">Add MIDI Device</div>
