Add checkbox to show only cloud stable plugins

--- a/html/index.html
+++ b/html/index.html
@@ -576,8 +576,8 @@ $('document').ready(function() {
                 <div class="control-group">
                     <input type="checkbox" name="installed" id="cloud-plugins-installed" />
                     <label for="cloud-plugins-installed">Installed only</label>
-                    <!-- <input type="radio" name="installed" value="not-installed" id="cloud-plugins-uninstalled" />
-                    <label for="cloud-plugins-uninstalled">Not Installed</label> -->
+                    <input type="checkbox" name="stable" id="cloud-plugins-stable" />
+                    <label for="cloud-plugins-stable">Stable only</label>
                 </div>
                 <ul class="categories list list-unstyled">
                     <li id="cloud-plugin-tab-All">All</li>
