Make sure mod-actions are always near the pedal icon

--- a/html/index.html
+++ b/html/index.html
@@ -22,13 +22,13 @@
 
     <script type="text/javascript" src="js/lib/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="js/lib/jquery-ui-1.10.1.custom.min.js"></script>
-    <script type="text/javascript" src="js/lib/jquery.ui.touch-punch.min.js?v={{version}}"></script>
+    <script type="text/javascript" src="js/lib/jquery.ui.touch-punch.min.js"></script>
+    <script type="text/javascript" src="js/lib/jquery.ba-resize.min.js"></script>
     <script type="text/javascript" src="js/lib/mustache.js?v={{version}}"></script>
     <script type="text/javascript" src="js/lib/jquery.svg.js?v={{version}}"></script>
     <script type="text/javascript" src="js/lib/sprintf-0.6.js"></script>
     <script type="text/javascript" src="js/lib/jquery.mousewheel.min.js?v={{version}}"></script>
     <script type="text/javascript" src="js/lib/jquery.textareaAutoResize.js?v={{version}}"></script>
-    <script type="text/javascript" src="js/lib/n3-browser.min.js?v={{version}}"></script>
     <script type="text/javascript" src="js/lib/arrive.min.js?v={{version}}"></script>
 
     <script type="text/javascript" src="js/constants.js?v={{version}}"></script>
