--- a/html/pedalboard.html
+++ b/html/pedalboard.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>MOD</title>
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="css/fontello/css/fontello.css"/>
     <link rel="stylesheet" type="text/css" href="css/main.css"/>
     <link rel="stylesheet" type="text/css" href="css/dashboard.css"/>
     <link rel="stylesheet" type="text/css" href="css/fonts.css"/>
+    <link rel="stylesheet" type="text/css" href="img/icons/icons.css"/>
 
     <!-- PEDALS -->
     <link rel="stylesheet" type="text/css" href="css/pedals.css"/>
@@ -16,6 +17,8 @@
 
     <script type="text/javascript" src="js/lib/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="js/lib/jquery-ui-1.10.1.custom.min.js"></script>
+    <script type="text/javascript" src="js/lib/jquery.ui.touch-punch.min.js"></script>
+    <script type="text/javascript" src="js/lib/jquery.ba-resize.min.js"></script>
     <script type="text/javascript" src="js/lib/mustache.js"></script>
     <script type="text/javascript" src="js/lib/jquery.svg.js"></script>
     <script type="text/javascript" src="js/lib/sprintf-0.6.js"></script>
