Fix reconnecting midi ports in crash recovery

--- a/html/icon.html
+++ b/html/icon.html
@@ -34,7 +34,7 @@
 
           if (uri) {
               $.ajax({
-                  url: '/effect/get/',
+                  url: '/effect/get',
                   data: { uri: uri },
                   success: function(effect, options) {
                       icongui = new GUI(effect)
