Save 'navigateFootswitches' in banks

--- a/html/index.html
+++ b/html/index.html
@@ -745,6 +745,11 @@ $('document').ready(function() {
           <div id="bank-edit">
             <div id="bank-addressings" class="mod-hidden">
               <h1>Untitled</h1>
+              <form class="form">
+                <div class="checkbox">
+                  <label><input type="checkbox" class="checkbox" id="js-navigate-bank" />Navigate pedalboards using footswitches</label>
+                </div>
+              </form>
               <!--
               <h2>Bank addressings:</h2>
               <small>Select footswitch functionality for this bank. Pedalboard footswitches will be overriden.</small>
