Preload *all* needed images, stupid

--- a/html/index.html
+++ b/html/index.html
@@ -109,6 +109,7 @@
 $('document').ready(function() {
     var preloadImages = [
         "/img/icons/blocked.svg",
+        "/img/icons/25/reload.png",
     ];
     for (var i = 0; i < preloadImages.length; i++) {
         var img = new Image();
