Make xrun counter clickable, will reset xruns to 0

--- a/html/index.html
+++ b/html/index.html
@@ -154,7 +154,8 @@ $('document').ready(function() {
       login: $('#login'),
       logout: $('#logout'),
       bypassLeftButton: $("#mod-bypassLeft"),
-      bypassRightButton: $("#mod-bypassRight")
+      bypassRightButton: $("#mod-bypassRight"),
+      xrunsButton: $('#mod-xruns'),
   })
 
   if ({{bundlepath}} && {{title}}) {
