--- a/html/index.html
+++ b/html/index.html
@@ -525,12 +525,7 @@ $('document').ready(function() {
             cpu
           </p>
         </div>
-        <div id="mod-xruns" class="icon">
-          <div class="progress" style="width: 100%;"></div>
-          <p class="progress-title" id="xruns-text">
-            0 Xruns
-          </p>
-        </div>
+        <div id="mod-xruns" class="icon">0 Xruns</div>
         <div id="mod-bypassRight" class="icon mod-bypass">Bypass R</div>
         <div id="mod-bypassLeft" class="icon mod-bypass">Bypass L</div>
         <div id="mod-add-midi" class="icon">Add MIDI Device</div>
