Cleanup, fixes for mod-app

--- a/html/index.html
+++ b/html/index.html
@@ -166,7 +166,7 @@ $('document').ready(function() {
   }
 
   if ({{using_app}}) {
-      desktop.setupApp({{using_desktop}})
+      desktop.setupApp()
   }
 
   if ({{using_mod}}) {
