Use minified/compressed lunr code

--- a/html/index.html
+++ b/html/index.html
@@ -50,20 +50,8 @@
     <script type="text/javascript" src="js/lib/jquery.mousewheel.min.js?v={{version}}"></script>
     <script type="text/javascript" src="js/lib/jquery.textareaAutoResize.js?v={{version}}"></script>
     <script type="text/javascript" src="js/lib/arrive.min.js?v={{version}}"></script>
-
+    <script type="text/javascript" src="js/lib/lunr.min.js?v={{version}}"></script>
     <script type="text/javascript" src="js/constants.js?v={{version}}"></script>
-
-    <!-- Lunr -->
-    <script src="js/lib/lunr/lunr.js" type="text/javascript" charset="utf-8"></script>
-    <script src="js/lib/lunr/utils.js" type="text/javascript" charset="utf-8"></script>
-    <script src="js/lib/lunr/tokenizer.js" type="text/javascript" charset="utf-8"></script>
-    <script src="js/lib/lunr/pipeline.js" type="text/javascript" charset="utf-8"></script>
-    <script src="js/lib/lunr/vector.js" type="text/javascript" charset="utf-8"></script>
-    <script src="js/lib/lunr/sorted_set.js" type="text/javascript" charset="utf-8"></script>
-    <script src="js/lib/lunr/event_emitter.js" type="text/javascript" charset="utf-8"></script>
-    <script src="js/lib/lunr/index.js" type="text/javascript" charset="utf-8"></script>
-    <script src="js/lib/lunr/document_store.js" type="text/javascript" charset="utf-8"></script>
-    <script src="js/lib/lunr/token_store.js" type="text/javascript" charset="utf-8"></script>
 
     <script type="text/javascript">
 
