Start (small) plugin store code rework, to be much faster

--- a/html/index.html
+++ b/html/index.html
@@ -58,6 +58,7 @@
       {% autoescape None %}
       var TEMPLATES = {}
       SITEURL = '{{cloud_url}}'
+      LV2_PLUGIN_DIR = '{{lv2_plugin_dir}}'
       var SAMPLERATE = {{sampleRate}}
       var NOTIFICATIONS_ENABLED = true
       var HARDWARE_PROFILE = JSON.parse(atob('{{hardware_profile}}'))
