Wait for screenshot to be done before allowing to share PB

--- a/html/index.html
+++ b/html/index.html
@@ -436,10 +436,11 @@ $('document').ready(function() {
 					</div>
 				</div>
 				<div id="share-window-fb">
-					<label for="pedalboard-share-fb"><input id="pedalboard-share-fb" type="checkbox" /> Share also on Facebook </label>
-					<div id="fb-authorization-container"></div>
+					<!--<label for="pedalboard-share-fb"><input id="pedalboard-share-fb" type="checkbox" /> Share also on Facebook </label>-->
+					<!--<div id="fb-authorization-container"></div>-->
+					<div id="share-wait-screenshot">Waiting for screenshot...</div>
 					<div class="textright">
-						<button style="margin-top: 3px" class="js-close btn btn-default btn-success" id="record-share">Just share</button>
+						<button style="margin-top: 3px" class="js-close btn btn-default btn-success" id="record-share" disabled="disabled">Just share</button>
 					</div>
 				</div>
 				</form>
